--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
   ],
   "rules": {
     "no-unused-vars": "error",
-    "no-unused-expressions": "off",
+    "no-unused-expressions": "error",
     "prefer-const": "error",
     "no-console": "warn",
     "no-undef": "error"
